--- a/Ketch/en.lproj/Localizable.strings
+++ b/Ketch/en.lproj/Localizable.strings
@@ -8,11 +8,11 @@
 
 "It's a Ketch!" = "It's a Ketch!";
 "Lucky you!" = "Lucky you!";
-"SingleMatchPrompt" = "It seems that %@ also thought you were pretty darn cute. Why not chat and see how things go?";
+"SingleMatchPrompt" = "Congrats! %@ also likes you! You'll have 3 days to reach out to %@ before they disappear for good. Why not chat and see how things go?";
 "DoubleMatchPrompt" = "Both %@ and %@ were charmed by you. Why not get in touch and see how things go?";
-"ThreeMatchesPrompt" = "YOU’LL SEE THREE POTENTIAL MATCHES";
-"ThreeChoicesPrompt" = "AND YOU’LL HAVE THREE CHOICES";
-"DragMatchsToChoices" = "DRAG THE MATCHES TO YOUR CHOICES";
-"SkipPrompt" = "NOT YOUR TYPE. WE'LL SHOW YOU LESS OF THESE.";
-"MarryPrompt" = "IF THEY SAY MARRY, MEANS IT'S A MATCH!";
-"SnoozePrompt" = "SOMEONE ELSE CAUGHT YOUR EYE. MAYBE PATHS WILL CROSS AGAIN.";
+"ThreeMatchesPrompt" = "YOU’LL SEE 3 POTENTIAL MATCHES";
+"ThreeChoicesPrompt" = "AND YOU’LL HAVE 3 CHOICES";
+"DragMatchsToChoices" = "DECIDE WHAT YOU PREFER";
+"SkipPrompt" = "POLITELY SAY NO";
+"MarryPrompt" = "SAY YES AND CHOOSE NOW";
+"SnoozePrompt" = "THINK ABOUT IT AND CHOOSE LATER";
