--- a/Ketch/en.lproj/Localizable.strings
+++ b/Ketch/en.lproj/Localizable.strings
@@ -7,10 +7,10 @@
 */
 
 "It's a Ketch!" = "It's a Ketch!";
-"SingleMatchPrompt" = "Congrats! %@ also likes you! You'll have 3 days to reach out to %@ before they disappear for good. Why not chat and see how things go?";
-"ThreeMatchesPrompt" = "YOU’LL SEE 3 POTENTIAL MATCHES";
-"ThreeChoicesPrompt" = "AND YOU’LL HAVE 3 CHOICES";
+"SingleMatchPrompt" = "%@ likes you! Your dreamboat will sail off in three days. Get on it before %@ disappears for good!";
+"ThreeMatchesPrompt" = "YOU’LL SEE THREE POTENTIAL MATCHES";
+"ThreeChoicesPrompt" = "AND YOU’LL HAVE THREE CHOICES";
 "DragMatchsToChoices" = "DECIDE WHAT YOU PREFER";
-"SkipPrompt" = "POLITELY SAY NO";
-"MarryPrompt" = "SAY YES AND CHOOSE NOW";
-"SnoozePrompt" = "THINK ABOUT IT AND CHOOSE LATER";
+"SkipPrompt" = "SAY NO POLITELY";
+"MarryPrompt" = "SAY YES NOW";
+"SnoozePrompt" = "SEE AGAIN LATER";
