--- a/Ketch/en.lproj/Localizable.strings
+++ b/Ketch/en.lproj/Localizable.strings
@@ -25,3 +25,11 @@
 "PermFacebookExplanation" = "We use your Facebook profile to get photos and bio. We never post without your permission.";
 "PermNotificationsExplanation" = "We send you notifications to let you know when you’ve got a message or somone said they liked you too.";
 "PermLocationExplanation" = "We use your rough location to find you matches nearby. We never share your address with anyone.";
+
+/* Profile Screen */
+"MoreSheetReport" = "Report %@";
+"MoreSheetCancel" = "Cancel";
+"ReportAlertTitle" = "Thank you for your feedback";
+"ReportAlertMessage" = "Why did you report this user?";
+"ReportAlertCancel" = "Cancel";
+"ReportAlertConfirm" = "Confirm";
