--- a/Ketch/en.lproj/Localizable.strings
+++ b/Ketch/en.lproj/Localizable.strings
@@ -7,6 +7,7 @@
 */
 
 /* Game Screen */
+"TapToContinue" = "TAP ANYWHERE TO CONTINUE";
 "ThreeMatchesPrompt" = "YOU’LL SEE THREE POTENTIAL MATCHES";
 "ThreeChoicesPrompt" = "AND YOU’LL HAVE THREE CHOICES";
 "DragMatchsToChoices" = "DRAG THE MATCHES UP TO YOUR CHOICES";
