--- a/Ketch/en.lproj/Localizable.strings
+++ b/Ketch/en.lproj/Localizable.strings
@@ -55,3 +55,14 @@
 "SettingsEducationPrompt" = "Enter where you went to school";
 "SettingsHeightPrompt" = "What's your height?";
 "SettingsAboutPrompt" = "Enter your bio";
+
+"SettingsLogoutTitle" = "What would you like to do?";
+"SettingsLogoutLogout" = "Just logout";
+"SettingsLogoutDeleteAccount" = "Delete my account";
+"SettingsLogoutCancel" = "Cancel";
+"SettingsDeleteAccountTitle" = "Delete Account";
+"SettingsDeleteAccountMessage" = "All your photos, messages, and matches will be permanently deleted. Are you sure you want to do this?";
+"SettingsDeleteAccountPlaceholder" = "If sure, type 'delete' to confirm.";
+"SettingsDeleteAccountConfirm" = "Confirm";
+"SettingsDeleteAccountCancel" = "Cancel";
+
