Take user to error screen if we detect there's no network connection

--- a/Ketch/en.lproj/Localizable.strings
+++ b/Ketch/en.lproj/Localizable.strings
@@ -66,3 +66,7 @@
 "SettingsDeleteAccountConfirm" = "Confirm";
 "SettingsDeleteAccountCancel" = "Cancel";
 
+/* Errors */
+"NetworkUnreachable" = "Seems like we don't have any network connection right now, try again later.";
+"KetchyUnavailableTitle" = "Ooops";
+"KetchyUnavailableMessage" = "Ketchy isn't home at the moment.";
