--- a/Ketch/en.lproj/Localizable.strings
+++ b/Ketch/en.lproj/Localizable.strings
@@ -67,6 +67,7 @@
 "SettingsDeleteAccountCancel" = "Cancel";
 
 /* Errors */
-"NetworkUnreachable" = "Seems like we don't have any network connection right now, try again later.";
+"errNetworkUnreachable" = "Network Unavailable";
+"errNetworkUnreachableRecovery" = "Seems like we don't have any network connection right now, try again later.";
 "KetchyUnavailableTitle" = "Ooops";
 "KetchyUnavailableMessage" = "Ketchy isn't home at the moment.";
