Rename more things from Ketch to Taylr

--- a/Taylr/en.lproj/Localizable.strings
+++ b/Taylr/en.lproj/Localizable.strings
@@ -1,9 +1,9 @@
 /* 
   Localizable.strings
-  Ketch
+  Taylr
 
   Created by Tony Xiao on 2/9/15.
-  Copyright (c) 2015 Ketch. All rights reserved.
+  Copyright (c) 2015 S10 Inc. All rights reserved.
 */
 
 /* Facebook Permission Screen */
