--- a/Taylr/en.lproj/InfoPlist.strings
+++ b/Taylr/en.lproj/InfoPlist.strings
@@ -1,9 +1,9 @@
 /* 
   InfoPlist.strings
-  Ketch
+  Taylr
 
   Created by Tony Xiao on 4/3/15.
-  Copyright (c) 2015 Ketch. All rights reserved.
+  Copyright (c) 2015 S10 Inc. All rights reserved.
 */
 
 "NSLocationWhenInUseUsageDescription" = "We use your location to help you find matches!";
