Display linkableAccounts and linkedServices in MeView

--- a/Taylr/en.lproj/Localizable.strings
+++ b/Taylr/en.lproj/Localizable.strings
@@ -28,6 +28,9 @@
 "HardUpgradeAlertOk" = "Upgrade";
 
 /* Settings */
+"MeLinkNewSerivceTitle" = "Link New Service";
+"MeCancelTitle" = "Cancel";
+
 "SettingsAgeFormat" = "%d years old";
 "SettingsGenderPreferenceFormat" = "Interested in %@";
 "SettingsWorkFormat" = "%@";
