User Interface for both adding and removing service

--- a/Taylr/en.lproj/Localizable.strings
+++ b/Taylr/en.lproj/Localizable.strings
@@ -29,6 +29,8 @@
 
 /* Settings */
 "MeLinkNewSerivceTitle" = "Link New Service";
+"MeRemoveServiceTitle" = "Are you sure you want to remove %@ account %@? You can always add it back later";
+"MeRemoveServiceConfirm" = "Yes";
 "MeCancelTitle" = "Cancel";
 
 "SettingsAgeFormat" = "%d years old";
