--- a/Taylr/en.lproj/Localizable.strings
+++ b/Taylr/en.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "FBPermDeniedAlertMessage" = "We are not able to log you in. Please try again.";
 
 /* Profile Screen */
+"ViewProfile" = "View Profile";
 "MoreSheetBlock" = "Block %@";
 "MoreSheetReport" = "Report %@";
 "MoreSheetCancel" = "Cancel";
