--- a/Taylr/en.lproj/Localizable.strings
+++ b/Taylr/en.lproj/Localizable.strings
@@ -73,3 +73,4 @@
 
 "emptyContactsMessage" = "This is where the messages you have sent or replied to appear.";
 "emptyNewMessage" = "People reaching out to you for the first time will show up here";
+"emptyDiscoverMessage" = "We couldn't find anybody around you yet.\nWhen we do they will show up here.";
