--- a/Taylr/en.lproj/Localizable.strings
+++ b/Taylr/en.lproj/Localizable.strings
@@ -50,7 +50,7 @@
 "errUnableToLoginMessage" = "Sorry we're not able to log you in at the moment. Please try again later :(";
 
 "errUnableToAddServiceTitle" = "Unable to add service";
-"errUnableToAddServiceMessage" = "Sorry we're not able to add service the moment. Please try again later :(";
+"errUnableToAddServiceMessage" = "Sorry we're not able to add this service at the moment. Please try again later :(";
 
 /* Errors */
 "errDefault" = "Unexpected Error";
