Get rid of the scary logout button. Hide it inside More options on me screen

--- a/Taylr/en.lproj/Localizable.strings
+++ b/Taylr/en.lproj/Localizable.strings
@@ -35,8 +35,9 @@
 "MeRemoveServiceConfirm" = "Remove";
 "MeCancelTitle" = "Cancel";
 
-"SettingsLogoutTitle" = "What would you like to do?";
-"SettingsLogoutLogout" = "Just logout";
+"SettingsMoreTitle" = "What would you like to do?";
+"SettingsFeedbackTitle" = "Give Feedback";
+"SettingsLogoutTitle" = "Logout";
 "SettingsLogoutDeleteAccount" = "Delete my account";
 "SettingsLogoutCancel" = "Cancel";
 "SettingsDeleteAccountTitle" = "Delete Account";
