--- a/Taylr/en.lproj/InfoPlist.strings
+++ b/Taylr/en.lproj/InfoPlist.strings
@@ -6,4 +6,4 @@
   Copyright (c) 2015 S10 Inc. All rights reserved.
 */
 
-"NSLocationWhenInUseUsageDescription" = "We use your location to help you find interesting people around you!";
+"NSLocationWhenInUseUsageDescription" = "We send your location to your connections only when you explicitly request it.";
